updateTask api
