# backend/app/controllers/tasksController.js
@@ -51,14 +51,49 @@ exports.create = async (request, response) => {
     }
 };
 
-exports.delete = async (request, response) => {
+exports.update = async (request, response) => {
     const userId = request.userId; // Get the authenticated user ID
     const { taskId } = request.params;
-    console.log('test', taskId, userId)
+    const { title, description, status, dueDate, color } = request.body;
+
     try {
         const task = await Task.findOne({
             where: {
-                id: parseInt(taskId),
+                id: taskId,
+                userId: userId,
+            },
+        });
+
+        if (!task) {
+            return response.status(404).send({ error: 'Task not found' });
+        }
+
+        // Ensure that id, createdDate, and updatedDate cannot be modified
+        const updatedFields = { title, description, status, dueDate, color };
+
+        Object.keys(updatedFields).forEach((key) => {
+            if (updatedFields[key] === undefined) {
+                delete updatedFields[key];
+            }
+        });
+
+        await task.update(updatedFields);
+
+        return response.status(200).send(task);
+    } catch (error) {
+        console.log(error);
+        return response.status(400).send({ message: 'Some error occurred' });
+    }
+};
+
+exports.delete = async (request, response) => {
+    const userId = request.userId; // Get the authenticated user ID
+    const { taskId } = request.params;
+    console.log('test', taskId, userId);
+    try {
+        const task = await Task.findOne({
+            where: {
+                id: taskId,
                 userId: userId,
             },
         });
